--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8137,8 +8137,7 @@ body {
   background: #fff;
   font-size: 16px;
   line-height: 1.8;
-  font-weight: 400;
-  color: #999999; }
+  font-weight: 400;}
   body.menu-show {
     overflow: hidden;
     position: fixed;
@@ -8675,10 +8674,12 @@ h1, h2, h3, h4, h5,
     list-style: none;
     margin-bottom: 10px; }
     #navi li a {
-      color: #000000; }
+      color: #000000;
+      font-size: 18px; }
       #navi li a.current {
         color: #3e64ff;
         margin-left: 20px;
+        font-size: 22px;
         position: relative; }
         #navi li a.current:after {
           position: absolute;
@@ -8687,6 +8688,7 @@ h1, h2, h3, h4, h5,
           width: 20px;
           height: 2px;
           content: '';
+          font-size: 18px;
           -webkit-transform: translateY(-50%);
           -ms-transform: translateY(-50%);
           transform: translateY(-50%);
@@ -8733,6 +8735,9 @@ h1, h2, h3, h4, h5,
     font-size: 18px;
     font-weight: 700;
     color: #000000; }
+  .resume-wrap .position-fontweight{
+    font-weight: 400;
+  }
 
 .ftco-partner {
   padding: 4em 0 !important; }
